[project]
name = "mlenv"
version = "0.1.0"
description = "A comprehensive machine learning environment and toolkit with PyTorch, transformers, and modern Python packaging"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "gradio>=5.3.0",
    "huggingface-hub>=0.26.5",
    "ipykernel>=6.29.5",
    "mplfinance>=0.12.10b0",
    "numpy>=2.2.0",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pep8>=1.7.1",
    "pygame>=2.6.1",
    "pytest>=8.3.4",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.47.0",
    "ultralytics>=8.3.23",
]
